Fixed grey at the top of the screen on small screen.s

--- a/public/tailwind-out.css
+++ b/public/tailwind-out.css
@@ -294,6 +294,11 @@
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .sm\:bg-gray-100 {
+    @media (width >= 40rem) {
+      background-color: var(--color-gray-100);
+    }
+  }
 }
 @property --tw-space-y-reverse {
   syntax: "*";
